# gazpar2haws

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  FAQ.md  MIGRATIONS.md  README.md  TODO.md  docker-compose.yaml  entrypoint.sh  gitversion.yaml  pyproject.template.toml  pyproject.toml  pytest.ini  repository.yaml
.devcontainer/: README.md  devcontainer.json
.github/workflows/: build-publish.yaml  ci.yaml  create-release.yaml  publish-to-dockerhub.yaml  publish-to-pypi.yaml  publish-to-testpypi.yaml  publish.yaml  publish.yaml.disabled  python-lint.yaml  python-test.yaml
.github/workflows/actions/: compute-version.yaml
.github/workflows/compute-version/: action.yaml
.github/workflows/git-tag/: action.yaml
.github/workflows/publish-to-dockerhub/: action.yaml
.github/workflows/publish-to-pypi/: action.yaml
.github/workflows/publish-to-testpypi/: action.yaml
.github/workflows/python-lint/: action.yaml
.github/workflows/python-test/: action.yaml
.github/workflows/unittest/: python-lint.yaml
add-on/: Dockerfile  config.yaml  entrypoint.sh
addons/: repository.yaml
addons/gazpar2haws/: DOCS.md  Dockerfile  README.md  build.template.yaml  build.yaml  config.yaml  config.yaml.template
addons/gazpar2haws/rootfs/app/: run.sh
addons/gazpar2haws/rootfs/app/config/: configuration.template.yaml  secrets.template.yaml
addons/gazpar2haws/rootfs/etc/services.d/gazpar2haws/: run
addons/hello_world/: run.sh
config/: configuration.template.yaml  configuration.yaml  secrets.template.yaml
docker/: Dockerfile  docker-compose.yaml  entrypoint.sh  secrets.template.env
docs/: DEVELOPER_GUIDE.md  FLEXIBLE_PRICING_GUIDE.md  IMPLEMENTATION_PLAN_FLEXIBLE_PRICING.md  ISSUE_FLEXIBLE_PRICING.md  SRC_LAYOUT_MIGRATION.md  issue-105-segfault-analysis.md  testing-addon-in-ha.md
gazpar2haws/: __init__.py  __main__.py  bridge.py  config_utils.py  configuration.py  date_array.py  datetime_utils.py  gazpar.py  haws.py  model.py  pricer.py  pricing.py  version.py
tests/: XLPricer.xlsx  test_bridge.py  test_configuration.py  test_date_array.py  test_datetime_utils.py  test_flexible_pricing.py  test_gazpar.py  test_haws.py  test_main.py  test_pricer.py  test_websocket.py
tests/config/: configuration.yaml  example_1.yaml  example_2.yaml  example_3.yaml  example_4.yaml  example_5.yaml  example_6.yaml  example_6bis.yaml  example_7.yaml  example_8.yaml  secrets.yaml  test_date_array.py
tests/containers/: docker-compose.yaml
tests/containers/config/: .gitignore
tests/containers/config/.storage/: auth  auth_provider.homeassistant
