[project]
name = "gazpar2haws"
version = "0.1.11"
description = "Gazpar2HAWS is a gateway that reads data history from the GrDF (French gas provider) meter and send it to Home Assistant using WebSocket interface"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Stéphane Senart" }
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",    
]
dependencies = [
    "pygazpar>=1.2.7",
    "websockets>=14.1",
    "pyyaml>=6.0.2"
]

[tool.poetry]
requires-poetry = ">=2.0"
include = ["CHANGELOG.md"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
